# ROSE

./: .gitignore  README.md  inference.py  pyproject.toml
hugging_face/: README.md  app.py
