[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rose"
version = "0.1.0"
description = "ROSE: Remove Objects with Side Effects in Videos"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "KunByte AI" }]
dependencies = [
  "pillow",
  "einops",
  "safetensors",
  "timm",
  "tomesd",
  "torchdiffeq",
  "torchsde",
  "decord",
  "datasets",
  "numpy",
  "scikit-image",
  "opencv-python",
  "omegaconf",
  "SentencePiece",
  "albumentations",
  "imageio[ffmpeg]",
  "imageio[pyav]",
  "tensorboard",
  "beautifulsoup4",
  "ftfy",
  "func_timeout",
  "accelerate>=0.25.0",
  "diffusers>=0.30.1,<=0.31.0",
  "transformers>=4.46.2",
  # Used in the codebase but not listed in requirements.txt
  "tqdm",
  "packaging",
]

[project.scripts]
rose-infer = "inference:main"

[tool.uv]
# Feel free to pin a Python version or add indexes here if needed.
environments = ["platform_system == 'Linux'"]
index-strategy = "unsafe-best-match"
extra-index-url = [
  "https://download.pytorch.org/whl/cu124",
]

# Dependency groups for different accelerator builds of PyTorch.
# Use with: `uv sync --group <group>`
[dependency-groups]
cpu = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]
cu124 = [
  "torch==2.6.0+cu124; platform_system == 'Linux'",
  "torchvision==0.21.0+cu124; platform_system == 'Linux'",
]

# Use PyTorch's CUDA 12.4 index for CUDA wheels in the `cu124` group.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
